# xarm7_inspace

./: .gitignore  README.md
docker/kinect_v2/: Dockerfile  build.bash  run.bash
docker/ros_gazebo_9/: Dockerfile  build.bash  run.bash
docker/ros_gazebo_9_ws/: Dockerfile  build.bash  run.bash
docker/ros_vrep_4_0_0/: Dockerfile  build.bash  run.bash
docker/ros_vrep_4_0_0_ws/: Dockerfile  build.bash  run.bash
docker/vrep_3_5_0/: Dockerfile  build.bash  run.bash
docker/vrep_4_0_0/: Dockerfile  build.bash  run.bash
scripts/: catkin_init_profiles.sh  catkin_init_profiles_with_deps.sh  config_network.sh  vrep_import_libraries.sh
xv_bringup/: CMakeLists.txt  package.xml
xv_bringup/config/: xarm_params.yaml
xv_bringup/config/kinect_calibration/002532270547/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
xv_bringup/launch/: bringup_hw.launch  bringup_sim.launch
xv_bringup/launch/include/: kinect.launch  xarm_server.launch
xv_control/: CMakeLists.txt  package.xml
xv_control/config/: controllers.yaml  gazebo_ros_control.yaml
xv_control/launch/: control_hw.launch  control_sim.launch
xv_core/: CMakeLists.txt  package.xml
xv_core/config/: camera_pose_estimation_hw.yaml  camera_pose_estimation_sim.yaml  logging.config
xv_core/include/xv_core/core/: arm_bridge.h  gripper_bridge.h
xv_core/launch/: core_hw.launch  core_sim.launch
xv_core/launch/demos/: gazebo_demo.launch  gripper_demo.launch  pickup_object_demo.launch
xv_core/launch/include/: aruco.launch  camera_pose_estimation.launch  object_detection.launch  pcl.launch
xv_core/src/core/: arm_bridge.cpp  gripper_bridge.cpp
xv_core/src/demos/: gazebo_demo.cpp  gripper_demo.cpp  pickup_object_demo.cpp
xv_core/src/nodes/: camera_pose_estimation_node.cpp  object_detection_node.cpp
xv_description/: CMakeLists.txt  package.xml
xv_description/launch/: kinect.launch  xv.launch  xv_hw.launch
xv_description/urdf/: kinect_v2.urdf.xacro  kinect_v2_mounted.urdf.xacro  xv.urdf.xacro  xv.xacro  xv_hw.urdf.xacro  xv_hw.xacro
xv_description/urdf/include/: arm.xacro  aruco_marker.gazebo.xacro  aruco_marker.xacro  common.xacro  gripper.urdf.xacro  gripper.xacro  inertial.xacro  kinect_stand.xacro  table.xacro  wooden_board.gazebo.xacro  wooden_board.xacro
xv_gazebo/: CMakeLists.txt  package.xml
xv_gazebo/launch/: gazebo.launch  spawn_kinect.launch  spawn_xv.launch
xv_gazebo/media/materials/scripts/: aruco_marker.material  wooden_board.material
xv_hw_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xv_hw_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  xv.srdf
xv_hw_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xv_moveit_controller_manager.launch.xml
xv_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
xv_moveit_config/config/: controllers.yaml  joint_limits.yaml  ros_controllers.yaml  xv.srdf
xv_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  xv_moveit_controller_manager.launch.xml
xv_viz/: CMakeLists.txt  package.xml
xv_viz/launch/: aruco.launch  core.launch  display_robot.launch  kinect.launch  motion_planning.launch  rviz.launch
xv_viz/rviz/: aruco.rviz  core.rviz  display_robot.rviz  kinect.rviz  motion_planning.rviz
xv_vrep/: CMakeLists.txt  package.xml
