<?xml version="1.0"?>
<package format="2">
  <name>xv_control</name>
  <version>0.0.0</version>
  <description>The xv_control package</description>
  <maintainer email="dkotel@softserveinc.com">Denys Kotelovych</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
