<?xml version="1.0"?>
<package format="2">
    <name>xv_core</name>
    <version>0.0.0</version>
    <description>The xv_core package</description>
    <maintainer email="dkotel@softserveinc.com">Denys Kotelovych</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <depend>eigen_stl_containers</depend>
    <depend>eigen_conversions</depend>
    <depend>eigen</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>rviz_visual_tools</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>xarm_msgs</depend>
    <depend>fiducial_msgs</depend>
</package>
