<?xml version="1.0"?>
<package format="2">
    <name>xv_gazebo</name>
    <version>0.0.0</version>
    <description>The xv_gazebo package</description>
    <maintainer email="dkotel@softserveinc.com">Denys Kotelovych</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <export>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>
