<?xml version="1.0"?>
<package format="2">
    <name>xv_viz</name>
    <version>0.0.0</version>
    <description>The xv_viz package</description>
    <maintainer email="dkotel@softserveinc.com">Denys Kotelovych</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>joint_state_publisher</depend>
    <depend>robot_state_publisher</depend>
    <depend>rviz</depend>
    <depend>xacro</depend>
</package>
