<?xml version="1.0"?>
<package format="2">
  <name>xv_vrep</name>
  <version>0.0.0</version>
  <description>The xv_vrep package</description>
  <maintainer email="dkotel@softserveinc.com">Denys Kotelovych</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
